--- a/hadoop-hdfs/pom.xml
+++ b/hadoop-hdfs/pom.xml
@@ -10,6 +10,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>hadoop-hdfs</artifactId>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 
 
 </project>
