--- a/hadoop-common/pom.xml
+++ b/hadoop-common/pom.xml
@@ -11,5 +11,11 @@
 
   <artifactId>hadoop-common</artifactId>
 
-
+  <dependencies>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>${common.lang.version}</version>
+    </dependency>
+  </dependencies>
 </project>
