--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <junit.version>4.11</junit.version>
+    <common.lang.version>2.6</common.lang.version>
+    <guava.version>11.0.2</guava.version>
   </properties>
 
   <build>
